k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finkixp-backend
  namespace: finkixp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finkixp-backend
  template:
    metadata:
      labels:
        app: finkixp-backend
    spec:
      containers:
      - name: backend
        image: finkixp-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: finkixp-backend
  namespace: finkixp-ns
spec:
  selector:
    app: finkixp-backend
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
