k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finkixp-frontend
  namespace: finkixp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finkixp-frontend
  template:
    metadata:
      labels:
        app: finkixp-frontend
    spec:
      containers:
      - name: frontend
        image: finkixp-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: finkixp-frontend
  namespace: finkixp-ns
spec:
  selector:
    app: finkixp-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: LoadBalancer
